--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-  
-  :root {
-    --font-sans: "Calibre","Inter","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
-  }
 
-  html, body, p, h1, h2, h3 { 
-    font-family: var(--font-sans);
-    }
+:root {
+  --font-sans: "Calibre", "Inter", "San Francisco", "SF Pro Text", -apple-system, system-ui, sans-serif;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html, body, p, h1, h2, h3 {
+  font-family: var(--font-sans);
+}
+
+body {
+  overflow-x: hidden;
+}
+
+#container {
+  width: 70%;
+}
