--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,14 +7,18 @@
 }
 
 * {
-  margin: 0;
-  padding: 0;
+  box-sizing: border-box;
+  font-family: var(--font-sans);
+  /* outline: red solid 1px; */
+  /* background: rgb(0 100 0 / 0.1) !important; */
 }
 
-html, body, p, h1, h2, h3 {
-  font-family: var(--font-sans);
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 body {
-  overflow-x: hidden;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
